--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             bottom: 0;
             border-width: 4px;
             border-style: solid;
-            border-image: linear-gradient(45deg, rgba(64, 224, 208, .5), rgba(173, 255, 47, .5)) 1;
+            border-image: linear-gradient(45deg, rgb(255, 127, 127), rgb(255, 0, 0)) 1;
         }
 
         #viewport-params-size,
@@ -46,7 +46,7 @@
             content: attr(text);
             position: absolute;
             display: inline-block;
-            background: var(--tg-theme-link-color, rgb(64, 224, 208));
+            background: var(--tg-theme-link-color, rgb(255, 0, 0));
             right: 4px;
             left: auto;
             font-size: 8px;
