--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             pointer-events: none;
             transition: all .2s ease;
         }
+
         #viewport:after {
             content: '';
             display: block;
@@ -37,25 +38,6 @@
             top: 0;
             bottom: 0;
         }
-
-        #viewport-params-size,
-        #viewport-params-expand {
-            content: attr(text);
-            position: absolute;
-            display: inline-block;
-            background: var(--tg-theme-link-color, rgb(255, 0, 0));
-            right: 4px;
-            left: auto;
-            font-size: 8px;
-            padding: 4px;
-            vertical-align: top;
-        }
-        #viewport-params-size {
-            top: 4px;
-        }
-        #viewport-params-expand {
-            top: 30px;
-        }
     </style>
 </head>
 
@@ -64,13 +46,10 @@
         <h1>Modals</h1>
         <button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
         <button onclick="showPopup();">Launch Popup</button>
-
-        <h1>Buttons</h1>
-        <button onclick="toggleMainButton();">Toggle Main Button</button>
     </main>
-    <div id="viewport"></div>
-    <div id="viewport-params-size"></div>
-    <div id="viewport-params-expand"></div>
+
+    <div id="viewport">This is the viewport</div>
+
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         // Init TWA
@@ -79,19 +58,14 @@
         // Expand on init
         Telegram.WebApp.expand();
 
-        // Event occurs whenever theme settings are changed in the user's Telegram app (including switching to night mode).
-        Telegram.WebApp.onEvent('themeChanged', function() {
-            document.documentElement.className = Telegram.WebApp.colorScheme;
-        });
-
         // Function to call showPopup API
         function showPopup() {
             Telegram.WebApp.showPopup({
                 title: 'TeslaMate',
                 message: 'You can open the link:',
                 buttons: [
-                    {id: 'link', type: 'default', text: 'Open TeslaMate'},
-                    {type: 'cancel'},
+            		{type: 'cancel'},
+                    {id: 'link', type: 'default', text: 'TeslaMate..'},
                 ]
             }, function(btn) {
                 if (btn === 'link') {
@@ -100,22 +74,12 @@
             });
         };
 
-        function setViewportData() {
-            var sizeEl = document.getElementById('viewport-params-size');
-            sizeEl.innerText = 'width: ' + window.innerWidth + ' x ' + 
-                'height: ' + Telegram.WebApp.viewportStableHeight;
-
-            var expandEl = document.querySelector('#viewport-params-expand');
-            expandEl.innerText = 'Is Expanded: ' + (Telegram.WebApp.isExpanded ? 'true' : 'false');
-        }
-
         Telegram.WebApp.setHeaderColor('secondary_bg_color');
 
-        setViewportData();
-        Telegram.WebApp.onEvent('viewportChanged', setViewportData);
-
+		// Event occurs whenever theme settings are changed in the user's Telegram app (including switching to night mode).
         Telegram.WebApp.onEvent('themeChanged', function() {
-            document.body.setAttribute('style', '--bg-color:' + Telegram.WebApp.backgroundColor);
+            document.documentElement.className = Telegram.WebApp.colorScheme;
+			document.body.setAttribute('style', '--bg-color:' + Telegram.WebApp.backgroundColor);
         });
 
     </script>
