eliminated main tag

--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
 </head>
 
 <body>
-    <main>
-        <h1>Modals</h1>
-        <button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
-        <button onclick="showPopup();">Launch Popup</button>
-    </main>
-
-    <div id="viewport">This is the viewport</div>
+        
+    <div id="viewport">
+		This is the viewport
+		<p>
+			<h1>Modals</h1>
+        	<button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
+        	<button onclick="showPopup();">Launch Popup</button>
+		</p>
+	</div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
