--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         
     <div id="viewport">
 		This is the viewport
-		<p>
+		<div>
 			<h1>Modals</h1>
         	<button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
         	<button onclick="showPopup();">Launch Popup</button>
-		</p>
+		</div>
 	</div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
