--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 
 <body>
         
-    <div id="viewport">
-		This is the viewport
-		<div>
-			<h1>Modals</h1>
-        	<button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
-        	<button onclick="showPopup();">Launch Popup</button>
-		</div>
-	</div>
+    <div id="viewport"></div>
+		
+	<main>
+		Thi is the <main></main>
+		<h1>Modals</h1>
+		<button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
+		<button onclick="showPopup();">Launch Popup</button>
+	</main>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
@@ -75,8 +75,6 @@
                 }
             });
         };
-
-        Telegram.WebApp.setHeaderColor('secondary_bg_color');
 
 		// Event occurs whenever theme settings are changed in the user's Telegram app (including switching to night mode).
         Telegram.WebApp.onEvent('themeChanged', function() {
