--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             --bg-color: var(--tg-theme-bg-color);
-            font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, Verdana, sans-serif;
+            font: 22px/28px "Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, Verdana, sans-serif;
             background-color: var(--bg-color);
             color: var(--tg-theme-text-color);
             margin: 48px 24px;
@@ -46,7 +46,7 @@
     <div id="viewport"></div>
 		
 	<main>
-		Thi is the <main></main>
+		This is the MAIN
 		<h1>Modals</h1>
 		<button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
 		<button onclick="showPopup();">Launch Popup</button>
@@ -60,6 +60,15 @@
         // Expand on init
         Telegram.WebApp.expand();
 
+		// console log
+		Telegram.WebApp.webappuser.get().then(function(user) {
+			console.log(user);
+		});
+
+		Telegram.WebApp.webappchat.get().then(function(chat) {
+			console.log(chat);
+		});
+
         // Function to call showPopup API
         function showPopup() {
             Telegram.WebApp.showPopup({
@@ -71,6 +80,7 @@
                 ]
             }, function(btn) {
                 if (btn === 'link') {
+					Telegram.WebApp.Hapticfeedback.impact('heavy');
                     Telegram.WebApp.openLink('http://192.168.1.107:4000/');
                 }
             });
