--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 		<h1>Modals</h1>
 		<button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
 		<button onclick="showPopup();">Launch Popup</button>
+
+		<h1>Logs</h1>
+		<div id="User"></div>
+		<div id="Chat"></div>
 	</main>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -62,11 +66,11 @@
 
 		// console log
 		Telegram.WebApp.webappuser.get().then(function(user) {
-			console.log(user);
+			document.getElementById("User").innerHTML = user;
 		});
 
 		Telegram.WebApp.webappchat.get().then(function(chat) {
-			console.log(chat);
+			document.getElementById("Chat").innerHTML = chat;
 		});
 
         // Function to call showPopup API
