--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         Telegram.WebApp.expand();
 
 		// console log
-		document.getElementById("User").innerHTML = Telegram.WebApp.WebAppUser;
-		document.getElementById("Chat").innerHTML = Telegram.WebApp.WebAppChat;
+		document.getElementById("User").innerHTML = Telegram.WebApp.WebAppInitData.WebAppUser;
+		document.getElementById("Chat").innerHTML = Telegram.WebApp.WebAppInitData.WebAppChat;
 
         // Function to call showPopup API
         function showPopup() {
@@ -80,7 +80,9 @@
             }, function(btn) {
                 if (btn === 'link') {
                     Telegram.WebApp.openLink('http://192.168.1.107:4000/');
-                }
+                } else {
+					Telegram.WebApp.HapticFeedback.notificationOccurred('success');
+				}
             });
         };
 
