--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         Telegram.WebApp.expand();
 
 		// console log
-		document.getElementById("User").innerHTML = Telegram.WebApp.WebAppInitData.user;
-		document.getElementById("Chat").innerHTML = Telegram.WebApp.WebAppInitData.chat;
+		document.getElementById("User").innerHTML = Telegram.WebApp.initDataUnsafe.user;
+		document.getElementById("Chat").innerHTML = Telegram.WebApp.initDataUnsafe.chat;
 
         // Function to call showPopup API
         function showPopup() {
