--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         const eventSource = new EventSource('http://melendriu.homepc.it:8888/events');
         eventSource.onmessage = function(event) {
             const dataElement = document.getElementById('sse-data');
-            dataElement.innerHTML += event.data + '<br>';
+            dataElement.innerHTML = event.data + '<br>';
         };
     </script>
 
