--- a/index.html
+++ b/index.html
@@ -104,11 +104,13 @@
     <script>
         const eventSource = new EventSource('http://melendriu.homepc.it:8888/events');
         eventSource.onmessage = function(event) {
-            const dataElement = document.getElementById('sse-data');
-            dataElement.innerHTML = event.data + '<br>';
-        };
-		eventSource.onerror = function(event) {
-            dataElement.innerHTML = 'Finished.. <br>';
+			const dataElement = document.getElementById('sse-data');
+			if (event.data == "close") {
+				dataElement.innerHTML = 'Finished..<br>';
+                eventSource.close();
+            } else {
+				dataElement.innerHTML = event.data + '<br>';
+			}
         };
     </script>
 
