--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+	<link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
     
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -107,7 +109,7 @@
         eventSource.onmessage = function(event) {			
 			dataElement.innerHTML = event.data + '<br>';
         };
-		
+
 		eventSource.onerror = function(event) {
 			eventSource.close();
 			dataElement.innerHTML = 'Finished..<br>';
