--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div id="Chat">Chat</div>
 
 		<h1>Server-Sent Events</h1>
-		<div hx-ext="sse" sse-connect={ "https://melendriu.homepc.it:8888/events" } sse-swap="data"></div>
+		<div hx-ext="sse" sse-connect="https://melendriu.homepc.it:8888/events" sse-swap="data"></div>
 
 	</main>
 
