--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script src="https://unpkg.com/htmx.org@2.0.0"></script>
-	<script src="https://unpkg.com/htmx.org/dist/ext/sse.js"></script>
+	<script src="https://unpkg.com/htmx-ext-sse@2.0.0/sse.js"></script>
     <script>
         // Init TWA
         Telegram.WebApp.ready();
