--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="htmx-config" content='{"withCredentials":"true"}'>
 
     <title>My TMA</title>
     <style>
@@ -105,19 +104,19 @@
 
     </script>
 
-    <script>
-    //	const eventSource = new EventSource('https://melendriu.homepc.it:8888/events');
-	//	const dataElement = document.getElementById('sse-data');
-	//
-	//	eventSource.onmessage = function(event) {			
-	//		dataElement.innerHTML = event.data + '<br>';
-	//	};
-	//
-	//	eventSource.onerror = function(event) {
-	//		eventSource.close();
-	//		dataElement.innerHTML = 'Finished..<br>';
-	//	};
-    </script>
+    <!--<script>
+    	const eventSource = new EventSource('https://melendriu.homepc.it:8888/events');
+		const dataElement = document.getElementById('sse-data');
+	
+		eventSource.onmessage = function(event) {			
+			dataElement.innerHTML = event.data + '<br>';
+		};
+	
+		eventSource.onerror = function(event) {
+			eventSource.close();
+			dataElement.innerHTML = 'Finished..<br>';
+		};
+    </script>-->
 
 </body>
 </html>
