--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 	<main>
 		This is the MAIN
 		<h1>Modals</h1>
-		<button onclick="Telegram.WebApp.showAlert('Hello World!');Telegram.WebApp.HapticFeedback.notificationOccurred('success');">Launch Alert</button></main><br>
-		<button onclick="showPopup();">Launch Popup</button></body><br>
+		<button onclick="Telegram.WebApp.showAlert('Hello World!');Telegram.WebApp.HapticFeedback.notificationOccurred('success');">Launch Alert</button></br>
+		<button onclick="showPopup();">Launch Popup</button></br>
 		<div onclick="Telegram.WebApp.HapticFeedback.notificationOccurred('success');">Click Me!</div>
 
 		<h1>Logs</h1>
