--- a/index.html
+++ b/index.html
@@ -57,18 +57,13 @@
 		<div onclick="Telegram.WebApp.HapticFeedback.notificationOccurred('success');">Success!</div></br>
 		<div onclick="Telegram.WebApp.HapticFeedback.notificationOccurred('warning');">Warning!</div></br>
 		<div onclick="Telegram.WebApp.HapticFeedback.notificationOccurred('error');">Error!</div></br>
-		<div onclick="Telegram.WebApp.HapticFeedback.notificationOccurred('light');">Light!</div></br>
-		<div onclick="Telegram.WebApp.HapticFeedback.notificationOccurred('medium');">Medium!</div></br>
-		<div onclick="Telegram.WebApp.HapticFeedback.notificationOccurred('heavy');">Heavy!</div></br>
-		<div onclick="Telegram.WebApp.HapticFeedback.notificationOccurred('rigid');">Rigid!</div></br>
-		<div onclick="Telegram.WebApp.HapticFeedback.notificationOccurred('soft');">Soft!</div></br>
 
 		<h1>Logs</h1>
 
 		<div id="InitData">InitData</div>
 		<div id="User">User</div>
 
-		<h1>Server-Sent Events</h1>
+		<h1>S-S-Events</h1>
 		<div hx-ext="sse" sse-connect="https://melendriu.homepc.it:8888/events" sse-swap="custom"></div>
 
 	</main>
